--- a/Manage2HandStore/Manage2HandStore.vcxproj.filters
+++ b/Manage2HandStore/Manage2HandStore.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Function.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InvoiceList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Product2H.cpp">
